kubernetes-selfmanaged/kubernetes/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tomcat-app
  labels:
    name: tomcat-app
    environment: demo
